Fix some issues with figure spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,9 @@ table,
 .highlight,
 form,
 picture,
-.b {
+.b,
+.p,
+figure {
   margin-bottom: 1.55rem;
   display: block;
 }
