--- a/assets/scss/partials/_shared.scss
+++ b/assets/scss/partials/_shared.scss
@@ -22,7 +22,7 @@ img, video, figure {
   display: block;
 }
 
-h1, p, ul, ol, dl, dd, table, .highlight, form, picture, .b {
+h1, p, ul, ol, dl, dd, table, .highlight, form, picture, .b, .p, figure {
   margin-bottom: $baseline;
   display: block;
 }
